<resources>
    <string name="app_name">RelativeLayout_2</string>
    <string name="txt1">879</string>
    <string name="txt2">Followers</string>
    <string name="txt3">107</string>
    <string name="txt4">Following</string>
    <string name="txt5">2</string>
    <string name="txt6">Playlists</string>
    <string name="txt7">Tori Chen * @tototori</string>
    <string name="txt8">Can I make a wish to end the politics and get  back to the music that started this ish?</string>
</resources>
