<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aula_7.relativelayout_2.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:id="@+id/img_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher"/>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="58dp"
                android:layout_marginStart="58dp"
                android:id="@+id/relativeLayout">
                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt1"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt2"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_below="@id/text_1"/>


            </RelativeLayout>

            <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/relativeLayout"
            android:layout_toEndOf="@+id/relativeLayout">
            <TextView
                android:id="@+id/text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt3"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/text_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt4"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/text_3"/>


        </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp">
                <TextView
                    android:id="@+id/text_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt5"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/text_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt6"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_below="@id/text_5"/>


            </RelativeLayout>


        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_below="@+id/rl_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/text_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt7"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt8"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_below="@id/text_7"/>
            />

    </RelativeLayout>
</RelativeLayout>
